fix scrollbar appearing on firefox

--- a/etc/startpage/style.css
+++ b/etc/startpage/style.css
@@ -6,10 +6,10 @@ body {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	margin: 0;
 }
 
 nobody {
-	margin-top: -10px;
 	/* flow horizontally */
 	display: flex;
 }
